# create-python-starter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  todo.txt
src/create_python_starter/: __main__.py  helpers.py  main.py  types.py
src/create_python_starter/templates/common/: .pre-commit-config.yaml  mkdocs.yml
src/create_python_starter/templates/common/.github/hooks/: pre-commit
src/create_python_starter/templates/common/scripts/: format  prepare  test
src/create_python_starter/templates/fastapi/: CONTRIBUTING.md
src/create_python_starter/templates/fastapi/app/: config.py  main.py
src/create_python_starter/templates/fastapi/app/routes/: README.md  root.py
src/create_python_starter/templates/fastapi/app/schemas/: README.md
src/create_python_starter/templates/fastapi/docs/: index.md
src/create_python_starter/templates/fastapi/docs/guides/: Routes.md  Schemas.md  Testing.md
src/create_python_starter/templates/fastapi/tests/: README.md  conftest.py  test_config.py  test_main.py
src/create_python_starter/templates/fastapi/tests/routes/: test_root.py
src/create_python_starter/templates/flask/: CONTRIBUTING.md  README.md
src/create_python_starter/templates/flask/app/: __init__.py  config.py
src/create_python_starter/templates/flask/app/routes/: README.md  root.py
src/create_python_starter/templates/flask/app/schemas/: README.md
src/create_python_starter/templates/flask/docs/: index.md
src/create_python_starter/templates/flask/docs/guides/: schemas.md  testing.md
src/create_python_starter/templates/flask/tests/: README.md  conftest.py
src/create_python_starter/templates/flask/tests/routes/: test_root.py
src/create_python_starter/templates/python/: CONTRIBUTING.md
src/create_python_starter/templates/python/docs/: index.md
src/create_python_starter/templates/python/src/[package]/: __init__.py
src/create_python_starter/templates/python/tests/: README.md
