[project]
name = "create_python_starter"
version = "1.0.0"
description = "A cli tool for scaffolding unk python projects."
authors = [
    { name = "lucspt", email = "149544385+lucspt@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
create-python-starter = "create_python_starter.__main__:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
    "ruff>=0.5.0",
]

[tool.rye.scripts]
fix = { chain = [
   "ruff check --fix --quiet",
   "format:ruff",
]}
"format:ruff" = "ruff format"

lint = { chain = [
    "ruff check --fix",
    "mypy ."
]}

[tool.ruff.lint]
select = [
   # isort 
   "I",
   # remove unused imports
   "F401"
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/create_python_starter"]
